@@ -305,4 +305,11 @@ else
 #
 ##############################################################################
 
+sub proc_exists
+{
+	my( $pid ) = @_;
+
+	return -d "/proc/$pid";
+}
+
 1;
